Added drone order to setup

--- a/config/sim.yaml
+++ b/config/sim.yaml
@@ -1,6 +1,8 @@
 /**:
     ros__parameters:
+      load_id: 1 #replace with swarm_num?
+
       first_drone_num: 1
       num_drones: 3
-      load_id: 1 #replace with swarm_num?
       
+      drone_order: [3, 2, 1] #[1, 2, 3] #ACW from load's x axis
