Updated launchfiles to take correct env params

--- a/config/phys.yaml
+++ b/config/phys.yaml
@@ -1,5 +1,8 @@
 /**:
     ros__parameters:
+      load_id: 1
+
       first_drone_num: 1
       num_drones: 3
       
+      drone_order: [1, 2, 3] #ACW from load's x axis
