--- a/config/sim.yaml
+++ b/config/sim.yaml
@@ -1,6 +1,6 @@
 /**:
     ros__parameters:
-      load_id: 1 #replace with swarm_num?
+      load_id: 1
 
       first_drone_num: 1
       num_drones: 3
