--- a/config/phys.yaml
+++ b/config/phys.yaml
@@ -4,5 +4,6 @@
 
       first_drone_num: 1
       num_drones: 3
+      this_drone_num: 1
       
       drone_order: [1, 2, 3] #ACW from load's x axis
