--- a/config/phys.yaml
+++ b/config/phys.yaml
@@ -5,5 +5,7 @@
       first_drone_num: 1
       num_drones: 3
       this_drone_num: 1
+
+      fully_auto: true
       
       drone_order: [1, 2, 3] #ACW from load's x axis
