--- a/config/sim.yaml
+++ b/config/sim.yaml
@@ -7,4 +7,4 @@
       
       fully_auto: true
 
-      drone_order: [1, 2, 3] #ACW from load's x axis
+      drone_order: [1] #[1, 2, 3] #ACW from load's x axis
