--- a/config/phys.yaml
+++ b/config/phys.yaml
@@ -6,6 +6,6 @@
       num_drones: 1 #3
       this_drone_num: 1
 
-      fully_auto: true
+      fully_auto: false
       
       drone_order: [1] #[1, 2, 3] #ACW from load's x axis
