--- a/config/sim.yaml
+++ b/config/sim.yaml
@@ -5,6 +5,6 @@
       first_drone_num: 1
       num_drones: 1 #3
       
-      fully_auto: true
+      fully_auto: false
 
       drone_order: [1] #[1, 2, 3] #ACW from load's x axis
