--- a/config/sim.yaml
+++ b/config/sim.yaml
@@ -3,8 +3,8 @@
       load_id: 1
 
       first_drone_num: 1
-      num_drones: 1 #3
+      num_drones: 3
       
       fully_auto: false
 
-      drone_order: [1] #[1, 2, 3] #ACW from load's x axis
+      drone_order: [1, 2, 3] #ACW from load's x axis
