--- a/config/phys.yaml
+++ b/config/phys.yaml
@@ -5,6 +5,7 @@
       load_id: 1
       load_pose_type: 'quasi-static' # quasi-static, visual, ground_truth
       evaluate: false # If you want to evaluate the tracking performance of the load
+      show_markers: 0 # Show the detected markers 0 = No, 1 = Yes, all, 2 = Drone 1 only
 
       first_drone_num: 1
       num_drones: 1 #3
