--- a/package.xml
+++ b/package.xml
@@ -12,6 +12,7 @@
   <exec_depend>px4_msgs</exec_depend>
   <exec_depend>swarm_load_carry_interfaces</exec_depend>
   <exec_depend>ros2launch</exec_depend>
+  <exec_depend>slung_pose_estimation</exec_depend>
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
