--- a/requirements_drones_reduced.txt
+++ b/requirements_drones_reduced.txt
@@ -6,7 +6,7 @@ aioconsole==0.5.1
 aiogrpc==1.8
 angles==1.15.0
 argcomplete==2.0.0
-attrs==22.1.0
+attrs==22.2.0
 builtin-interfaces==1.2.1
 catkin-pkg==0.5.2
 Cerberus==1.3.4
@@ -87,7 +87,7 @@ pyros-genmsg==0.5.8
 pyrsistent==0.19.2
 pyserial==3.5
 python-dateutil==2.8.2
-python-qt-binding==1.1.1
+python-qt-binding==1.1.2
 pytz==2022.6
 pyulog==1.0.0
 PyYAML==6.0
@@ -96,10 +96,10 @@ qt-gui==2.2.2
 qt-gui-cpp==2.2.2
 qt-gui-py-common==2.2.2
 quality-of-service-demo-py==0.20.3
-quaternionic==1.0.5
+quaternionic==1.0.6
 rcl-interfaces==1.2.1
 #rclpy==3.3.8
-rcutils==5.1.3
+rcutils==5.1.4
 requests==2.28.1
 resource-retriever==3.1.1
 rmw-dds-common==1.6.0
@@ -124,15 +124,5 @@ unique-identifier-msgs==2.2.1
 urllib3==1.26.13
 vcstool==0.3.0
 visualization-msgs==4.2.3
-xacro==2.0.8
+xacro==1.13.3 #2.0.8
 yarg==0.1.9
-
-
-
-catkin-pkg
-empy
-lark
-
-
-pymap3d==3.0.1
-quaternionic==1.0.6
