--- a/requirements_gcs.txt
+++ b/requirements_gcs.txt
@@ -4,21 +4,9 @@ action-tutorials-py==0.20.3
 actionlib-msgs==4.2.3
 aioconsole==0.5.1
 aiogrpc==1.8
-ament-cmake-test==1.3.5
-ament-copyright==0.12.6
-ament-cppcheck==0.12.6
-ament-cpplint==0.12.6
-ament-flake8==0.12.6
-ament-index-python==1.4.0
-ament-lint==0.12.6
-ament-lint-cmake==0.12.6
-ament-package==0.14.0
-ament-pep257==0.12.6
-ament-uncrustify==0.12.6
-ament-xmllint==0.12.6
 angles==1.15.0
 argcomplete==2.0.0
-attrs==22.1.0
+attrs==22.2.0
 builtin-interfaces==1.2.1
 catkin-pkg==0.5.2
 Cerberus==1.3.4
@@ -60,9 +48,7 @@ kiwisolver==1.4.4
 lark==1.1.5
 laser-geometry==2.4.0
 launch==1.0.4
-launch-ros==0.19.4
 launch-testing==1.0.4
-launch-testing-ros==0.19.4
 launch-xml==1.0.4
 launch-yaml==1.0.4
 lifecycle-msgs==1.2.1
@@ -78,6 +64,7 @@ mpmath==1.2.1
 nav-msgs==4.2.3
 numba==0.56.4
 numpy==1.22.2
+numpy-quaternion==2022.4.3
 nunavut==1.9.0
 osrf-pycommon==2.0.2
 packaging==21.3
@@ -89,7 +76,6 @@ pipreqs==0.4.11
 pkgconfig==1.5.5
 protobuf==4.21.12
 psutil==5.9.3
-px4-msgs==2.0.1
 pybind11==2.10.4
 pybullet==3.2.5
 pydsdl==1.16.1
@@ -101,7 +87,7 @@ pyros-genmsg==0.5.8
 pyrsistent==0.19.2
 pyserial==3.5
 python-dateutil==2.8.2
-python-qt-binding==1.1.1
+python-qt-binding==1.1.2
 pytz==2022.6
 pyulog==1.0.0
 PyYAML==6.0
@@ -110,63 +96,11 @@ qt-gui==2.2.2
 qt-gui-cpp==2.2.2
 qt-gui-py-common==2.2.2
 quality-of-service-demo-py==0.20.3
-quaternionic==1.0.5
 rcl-interfaces==1.2.1
-rclpy==3.3.8
-rcutils==5.1.3
+rcutils==5.1.4
 requests==2.28.1
 resource-retriever==3.1.1
 rmw-dds-common==1.6.0
-ros2action==0.18.6
-ros2bag==0.15.6
-ros2cli==0.18.6
-ros2component==0.18.6
-ros2doctor==0.18.6
-ros2interface==0.18.6
-ros2launch==0.19.4
-ros2lifecycle==0.18.6
-ros2multicast==0.18.6
-ros2node==0.18.6
-ros2param==0.18.6
-ros2pkg==0.18.6
-ros2run==0.18.6
-ros2service==0.18.6
-ros2topic==0.18.6
-rosbag2-interfaces==0.15.6
-rosbag2-py==0.15.6
-rosgraph-msgs==1.2.1
-rosidl-adapter==3.1.4
-rosidl-cli==3.1.4
-rosidl-cmake==3.1.4
-rosidl-generator-c==3.1.4
-rosidl-generator-cpp==3.1.4
-rosidl-generator-py==0.14.4
-rosidl-parser==3.1.4
-rosidl-runtime-py==0.9.3
-rosidl-typesupport-c==2.0.0
-rosidl-typesupport-cpp==2.0.0
-rosidl-typesupport-fastrtps-c==2.2.0
-rosidl-typesupport-fastrtps-cpp==2.2.0
-rosidl-typesupport-introspection-c==3.1.4
-rosidl-typesupport-introspection-cpp==3.1.4
-rpyutils==0.2.1
-rqt-action==2.0.1
-rqt-bag==1.1.4
-rqt-bag-plugins==1.1.4
-rqt-console==2.0.2
-rqt-graph==1.3.0
-rqt-gui==1.1.5
-rqt-gui-py==1.1.5
-rqt-msg==1.2.0
-rqt-plot==1.1.2
-rqt-publisher==1.5.0
-rqt-py-common==1.1.5
-rqt-py-console==1.0.2
-rqt-reconfigure==1.1.1
-rqt-service-caller==1.0.5
-rqt-shell==1.0.2
-rqt-srv==1.0.3
-rqt-topic==1.5.0
 scikit-learn==1.1.2
 scipy==1.9.3
 sensor-msgs==4.2.3
@@ -178,26 +112,15 @@ statistics-msgs==1.2.1
 std-msgs==4.2.3
 std-srvs==4.2.3
 stereo-msgs==4.2.3
-swarm-load-carry==0.0.0
-swarm-load-carry-interfaces==0.0.0
 sympy==1.11.1
-teleop-twist-keyboard==2.3.2
-tf-transformations==1.0.0
-tf2-geometry-msgs==0.25.2
-tf2-kdl==0.25.2
-tf2-msgs==0.25.2
-tf2-py==0.25.2
-tf2-ros-py==0.25.2
-tf2-tools==0.25.2
 threadpoolctl==3.1.0
 toml==0.10.2
 topic-monitor==0.20.3
 trajectory-msgs==4.2.3
-turtle-tf2-py==0.3.6
 turtlesim==1.4.2
 unique-identifier-msgs==2.2.1
 urllib3==1.26.13
 vcstool==0.3.0
 visualization-msgs==4.2.3
-xacro==2.0.8
+xacro==1.13.3
 yarg==0.1.9
