--- a/config/sim.yaml
+++ b/config/sim.yaml
@@ -5,11 +5,11 @@
       load_id: 1
       load_pose_type: 'quasi-static' # quasi-static, visual, ground_truth
       evaluate: false # If you want to evaluate the tracking performance of the load
-      show_markers: 2 # Show the detected markers 0 = No, 1 = Yes all, 2 = Drone 1 only # TODO: Replace with ENUM?
+      show_markers: 0 # Show the detected markers 0 = No, 1 = Yes all, 2 = Drone 1 only # TODO: Replace with ENUM?
 
       first_drone_num: 1
       num_drones: 3
-      num_cameras: 3
+      num_cameras: 0 # 0 if cameras are off
       
       fully_auto: false
 
