--- a/config/sim.yaml
+++ b/config/sim.yaml
@@ -1,6 +1,7 @@
 /**:
     ros__parameters:
       env: 'sim'
+      use_sim_time: true
       
       load_id: 1
       load_pose_type: 'quasi-static' # quasi-static, visual, ground_truth
