--- a/requirements_gcs.txt
+++ b/requirements_gcs.txt
@@ -5,11 +5,11 @@ actionlib-msgs==4.2.3
 aioconsole==0.5.1
 aiogrpc==1.8
 angles==1.15.0
-argcomplete==2.0.0
+#argcomplete==2.0.0
 attrs==22.2.0
 builtin-interfaces==1.2.1
 catkin-pkg==0.5.2
-Cerberus==1.3.4
+#Cerberus==1.3.4
 certifi==2022.12.7
 chardet==5.1.0
 charset-normalizer==2.1.1
@@ -112,7 +112,7 @@ statistics-msgs==1.2.1
 std-msgs==4.2.3
 std-srvs==4.2.3
 stereo-msgs==4.2.3
-sympy==1.11.1
+#sympy==1.11.1
 threadpoolctl==3.1.0
 toml==0.10.2
 topic-monitor==0.20.3
