--- a/config/sim.yaml
+++ b/config/sim.yaml
@@ -21,8 +21,10 @@
       
       # Heights/distances/dimensions
       height_drone_cs_rel_gnd: 0.0 #0.24 # m
+      height_load_cs_rel_gnd: 0.0 #0.1 # m
       height_drone_rel_load: 2.0 # m
       height_load_pre_tension: -0.2 # m
+      height_max_load_takeoff: 4 #m
       pos_threshold: 0.3 # m
 
       takeoff_height_load: 1.0 #m
@@ -30,10 +32,14 @@
       t_cam_rel_pixhawk: [-0.1, 0.03, -0.025] # Camera translation relative to PX4 (i.e. drone body)
       R_cam_rel_pixhawk: [3.141592654, 0.0, -1.570796327] # Camera rotation relative to PX4 (i.e. drone body)
 
+      t_marker_rel_load: [0.0, 0.0, 0.1] # Marker translation relative to load
+      R_marker_rel_load: [0.0, 0.0, 1.570796327] # Marker rotation relative to load
+
       # Timings
       # Note cnt thresholds are linked to the timer periods
       timer_period_drone: 0.1 # sec
       timer_period_gcs_background: 0.2 # sec
+      timer_period_load: 0.1 # sec
 
       cnt_threshold_drone_setup: 50 #5/timer_period_drone # Tried 3, sometimes issues (weird circling issue of drone 2)
       cnt_threshold_takeoff_start: 30 #3/timer_period_drone # INCREASE IF NEEDED
