--- a/config/phys.yaml
+++ b/config/phys.yaml
@@ -9,11 +9,11 @@
       show_markers: 0 # Show the detected markers 0 = No, 1 = Yes all, 2 = Drone 1 only # TODO: Replace with ENUM?
 
       ## DRONE SETTINGS
-      first_drone_num: 1
+      first_drone_num: 2 #1
       num_drones: 2
       num_cameras: 0 # 0 if cameras are off
     
-      drone_order: [1, 2] #[1, 2, 3] #ACW from load's x axis
+      drone_order: [2, 3] #[1, 2, 3] #ACW from load's x axis
 
       ## FORMATION CONTROL
       kp_formation_load: 0.0 #0.1
