--- a/config/sim.yaml
+++ b/config/sim.yaml
@@ -8,13 +8,14 @@
       load_pose_type: 'quasi-static' # quasi-static, visual, ground_truth
       evaluate: false # If you want to evaluate the tracking performance of the load
       show_markers: 0 # Show the detected markers 0 = No, 1 = Yes all, 2 = Drone 1 only # TODO: Replace with ENUM?
+      marker_edge_length: 0.08 # m
 
       ## DRONE SETTINGS
-      first_drone_num: 1 #1
+      first_drone_num: 2 #1
       num_drones: 2 #3
       num_cameras: 0 # 0 if cameras are off
     
-      drone_order: [1, 2] #[1, 2, 3] #ACW from load's x axis
+      drone_order: [2, 3] #[1, 2, 3] #ACW from load's x axis
 
       ## FORMATION CONTROL
       kp_formation_load: 0.0 #0.1 #0.5 (for faster, larger radius)
@@ -58,4 +59,8 @@
       cnt_threshold_land_post_load_down: 50
       cnt_threshold_land_drones: 60
       cnt_threshold_land_pre_disarm: 30
+
+      ## TOPIC NAMES
+      topic_img_rgb: /out/camera
+      topic_cam_info_color: /color/camera_info
       
