--- a/config/phys.yaml
+++ b/config/phys.yaml
@@ -9,6 +9,10 @@
       show_markers: 0 # Show the detected markers 0 = No, 1 = Yes all, 2 = Drone 1 only # TODO: Replace with ENUM?
       marker_edge_length: 0.075 # m
 
+      ## GCS SETTINGS
+      auto_level: 0 # 0 = "Fully manual" - requires checks at intermediate steps, 1 = "semi-automatic" - fewer intermediate steps, 2 = "fully automatic" - turn into offboard mode for completely automatic mission
+      min_on_gcs: true # Run all nodes possible on the drone swarm rather than GCS
+
       ## DRONE SETTINGS
       first_drone_num: 1 #1
       num_drones: 1
@@ -21,18 +25,18 @@
       #r_drones_max_safety: 0.5 # m
 
       ## PHASE SETTINGS 
-      fully_auto: false
-
       # Mission settings
       mission_circle_r: 2.0 # m
       mission_circle_v: 0.5 # m/s 
       
       # Heights/distances/dimensions
+      # Formation dimensions
       height_drone_cs_rel_gnd: 0.0 #0.24 # m
       height_load_cs_rel_gnd: 0.0 #0.1 # m
-      height_drone_rel_load: 2.0 # m
       height_load_pre_tension: -0.2 # m
-      height_max_load_takeoff: 4 #m
+
+      takeoff_height_load: 1.0 #m
+      takeoff_height_load_max: 3.0 #m # Safety feature - maximum height load will be commanded to take off
 
       r_drones_rel_load: 1.5 # m
       d_drones_rel_min: 1.0 # m
@@ -40,8 +44,11 @@
 
       pos_threshold: 0.3 # m
 
-      takeoff_height_load: 1.0 #m
+      # Load and cable dimensions
+      cable_length: 2.0 #m
+      load_connection_point_r: 0.095 #m
 
+      # Camera and markers
       t_cam_rel_pixhawk: [-0.1, 0.03, -0.025] # Camera translation relative to PX4 (i.e. drone body)
       R_cam_rel_pixhawk: [3.141592654, 0.0, -1.570796327] # Camera rotation relative to PX4 (i.e. drone body)
 
