--- a/config/phys.yaml
+++ b/config/phys.yaml
@@ -8,7 +8,7 @@
       load_pose_type: 'quasi-static' # quasi-static, visual, ground_truth
       evaluate: false # If you want to evaluate the tracking performance of the load
       show_markers: 0 # Show the detected markers 0 = No, 1 = Yes all, 2 = Drone 1 only # TODO: Replace with ENUM?
-      marker_edge_length: 0.075 # m
+      marker_edge_length: 0.125 #0.075 # m
 
       ## GCS SETTINGS
       auto_level: 0 # 0 = "Fully manual" - requires checks at intermediate steps, 1 = "semi-automatic" - fewer intermediate steps, 2 = "fully automatic" - turn into offboard mode for completely automatic mission
