--- a/config/phys.yaml
+++ b/config/phys.yaml
@@ -17,10 +17,10 @@
 
       ## DRONE SETTINGS
       first_drone_num: 1 #1
-      num_drones: 1
-      num_cameras: 1 # 0 if cameras are off
+      num_drones: 3
+      num_cameras: 3 # 0 if cameras are off
     
-      drone_order: [1] #[1, 2, 3] #ACW from load's x axis
+      drone_order: [1, 2, 3] #[1, 2, 3] #ACW from load's x axis
 
       ## FORMATION CONTROL
       kp_formation_load: 0.0 #0.1
