Moved more to pixhawk_pose, before clean

--- a/config/phys.yaml
+++ b/config/phys.yaml
@@ -14,6 +14,7 @@
       auto_level: 0 # 0 = "Fully manual" - requires checks at intermediate steps, 1 = "semi-automatic" - fewer intermediate steps, 2 = "fully automatic" - turn into offboard mode for completely automatic mission
       min_on_gcs: true # Run all nodes possible on the drone swarm rather than GCS
       real_load_attached: true # If no load is attached, have to run load node somewhere else 
+      phase_change_requests_through_background: true # If true, phase change requests are sent through the gcs background node rather than from the gcs user node directly to the drones
 
       ## DRONE SETTINGS
       first_drone_num: 1 #1
@@ -80,7 +81,7 @@
       cnt_threshold_fully_auto_mission: 50
       cnt_threshold_land_pre_descent: 50
       cnt_threshold_land_post_load_down: 50
-      cnt_threshold_land_drones: 60
+      cnt_threshold_land_drones: 100
       cnt_threshold_land_pre_disarm: 30
 
       ## TOPIC NAMES
