--- a/config/sim.yaml
+++ b/config/sim.yaml
@@ -5,7 +5,7 @@
       
       ## LOAD SETTINGS
       load_id: 1
-      load_pose_type: 'quasi-static' # quasi-static, visual, ground_truth
+      load_pose_type: 'ground_truth' # quasi-static, visual, ground_truth
       evaluate: false # If you want to evaluate the tracking performance of the load
       show_markers: 0 # Show the detected markers 0 = No, 1 = Yes all, 2 = Drone 1 only # TODO: Replace with ENUM?
       marker_edge_length: 0.08 # m
