--- a/config/phys.yaml
+++ b/config/phys.yaml
@@ -6,7 +6,7 @@
       ## LOAD SETTINGS
       load_id: 1
       load_pose_type: 'quasi-static' # quasi-static, visual, ground_truth
-      evaluate: false # If you want to evaluate the tracking performance of the load
+      evaluate: true # If you want to evaluate the tracking performance of the load
       show_markers: 0 # Show the detected markers 0 = No, 1 = Yes all, 2 = Drone 1 only # TODO: Replace with ENUM?
       marker_edge_length: 0.125 #0.075 # m
 
