--- a/config/phys.yaml
+++ b/config/phys.yaml
@@ -25,6 +25,16 @@
     
       drone_order: [1, 2, 3] #[1, 2, 3] #ACW from load's x axis
 
+      ## CAMERA SETTINGS
+      initial_reset: true
+      enable_color: true
+      enable_depth: false
+      enable_infra1: false
+      enable_infra2: false
+
+      rgb_camera.enable_auto_exposure: true
+      rgb_camera.profile: 640x480x15 #30
+
       ## FORMATION CONTROL
       kp_formation_load: 0.0 #0.1
       #r_drones_max_safety: 0.5 # m
