--- a/config/sim.yaml
+++ b/config/sim.yaml
@@ -14,8 +14,15 @@
       auto_level: 0 # 0 = "Fully manual" - requires checks at intermediate steps, 1 = "semi-automatic" - fewer intermediate steps, 2 = "fully automatic" - turn into offboard mode for completely automatic mission
       #min_on_gcs: true # Run all nodes possible on the drone swarm rather than GCS
       #real_load_attached: true # If no load is attached, have to run load node somewhere else 
+      #run_load_node_on: 'load' # 'load', 'drone', 'gcs' We can run the load node on the gcs, a load or a drone
       #run_background_node_on: 'load' # 'load', 'drone'
+      #run_user_node_on: 'drone' # 'drone', 'gcs'. Running the user node on the drone means that the RC will be used to send offboard transition commands, otherwise they will be sent from the gcs through WiFi
+      user_interaction_through_rc: false #Send the user interaction commands from a remote controller (true) or through the ground control station (false)
       phase_change_requests_through_background: true # If true, phase change requests are sent through the gcs background node rather than from the gcs user node directly to the drones
+
+      ## RC SETTINGS
+      rc_aux_thresholds: [65.0, 70.0, 75.0, 80.0, 85.0, 90.0, 100.0] # Aux1 expected values for the different offboard phases: takeoff, formation, engage tension, mission, land, hold (all), kill (all)
+      rc_aux_buffer: 0.01 # The +/- range from the above thresholds that are still considered acceptable
 
       ## DRONE SETTINGS
       first_drone_num: 1 #1
@@ -72,6 +79,7 @@
       # Timings
       # Note cnt thresholds are linked to the timer periods
       timer_period_drone: 0.1 # sec
+      timer_period_gcs_user: 0.1 # sec
       timer_period_gcs_background: 0.2 # sec
       timer_period_load: 0.1 # sec
 
