--- a/config/phys.yaml
+++ b/config/phys.yaml
@@ -5,7 +5,7 @@
 
       ## DEBUG SETTINGS
       print_desired_load_pose: false # In the gcs background node
-      print_debug_msgs: false # In the drone node (can add to other nodes too)
+      print_debug_msgs: false # In the drone node (can add to other nodes too). TODO: Could properly use ROS logging levels
 
       ## LOAD SETTINGS
       load_id: 1
