--- a/config/phys.yaml
+++ b/config/phys.yaml
@@ -5,7 +5,7 @@
 
       ## DEBUG SETTINGS
       print_desired_load_pose: false # In the gcs background node
-      print_debug_msgs: false # In the drone node (can add to other nodes too). TODO: Could properly use ROS logging levels
+      print_debug_msgs: false # In the drone node (can add to other nodes too). TODO: Could properly use ROS logging levels: https://docs.ros.org/en/humble/Tutorials/Demos/Logging-and-logger-configuration.html
 
       ## LOAD SETTINGS
       load_id: 1
@@ -28,8 +28,8 @@
 
       ## DRONE SETTINGS
       first_drone_num: 1 #1
-      num_drones: 1 #3
-      num_cameras: 1 #3 # 0 if cameras are off
+      num_drones: 3
+      num_cameras: 3 # 0 if cameras are off
     
       drone_order: [1, 2, 3] #[1, 2, 3] #ACW from load's x axis
 
